<resources>
    <string name="app_name">MensaPluse1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notesTitle">notes:</string>
    <string name="studentTitle">Student</string>
    <string name="employeeTitle">Employee</string>
    <string name="PupilTitle">Pupil</string>
    <string name="othersTitle">Others</string>
    <string name="samplePriceValue">1.59 €</string>
    <string name="canteen">Canteen</string>
    <string name="setting">Setting</string>
    <string name="price_format">Student: %1$s€ | Employee: %2$s€ \nOthers: %3$s€</string>
    <string name="latitude_label">Latitude: %f</string>
    <string name="longitude_label">Longitude: %f</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="permission_denied_explanation">
        Permission was denied, but is needed for core functionality.
    </string>
    <string name="permission_rationale">
        Location permission is needed for core functionality
    </string>
    <string name="settings">Settings</string>

    <string name="no_internet_message">You are offline please connect to internet to get updated Data.</string>
    <string name="no_meal">Unfortunately No Meals are available on this Day</string>
    <string name="snackbar_ok_button">ok</string>
    <string name="todays_menu_title">Today\'s Menu</string>
    <string name="tomorrow_menu_title">Tomorrow\'s Menu</string>
    <string name="date_format">EEEE, MMM d, \'\'yy</string>
    <string name="api_formatted_date">dd-MM-yyyy</string>
    <string name="menu_on">Menu on" "</string>
    <string name="title_date_format">E dd-MM-yyyy</string>
    <string name="setting_up">Setting Up</string>
    <string name="updating_data">Updating Data...</string>
    <string name="map">Map</string>

    <string name="google_maps_key">GOOGLE_MAPS_KEY</string>
    <string name="mapActivityToolBarTitle">Canteens locations</string>
    <string name="aboutActivityToolBarTitle">About OpenMensa</string>
    <string name="unableToGetLastLocation">could not get last know location</string>
    <string name="couldNotRequestLocationUpdate">could not request location update</string>
    <string name="version_number_value">1.00000</string>
    <string name="version_number">version-Number</string>
    <string name="about_this_app_title">About this app</string>
    <string name="developer_link">https://www.linkedin.com/in/emmanuel-davies-977154124/</string>
    <string name="developer_info">Developer Info</string>

</resources>
