<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
>

    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/about_toolbar"
    />
    <TextView
            android:text="@string/about_this_app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/AboutAppId"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:textStyle="bold"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/dividerViewId"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="12dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/version_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/versionNumberViewid"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" android:textSize="14sp"
            android:textStyle="bold" tools:text="App-Version"
    />
    <TextView
            android:text="@string/version_number_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/versionNumberValueId"
            android:layout_marginStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="12dp"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/developerInfoTitleId"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="visible" android:text="@string/developer_info"
            android:layout_marginTop="8dp" android:layout_marginStart="12dp" android:layout_marginEnd="12dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/developerInfoLinkId"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            android:text="@string/developer_link"
            android:linksClickable="true"
            android:layout_marginStart="12dp" android:layout_marginEnd="12dp"/>

</LinearLayout>